# Argus

./: .env.example  .gitignore  AGENTS.md  BLOCKED_LOG.md  CLAUDE.md  Dockerfile  FEATURE_BACKLOG.md  ITERATION_LOG.md  README.md  SQLAlchemy.md  _do_push.sh  _push.sh  alembic.ini  docker-compose.yml  pyproject.toml  train.md
.claude/: settings.json
alembic/: env.py
alembic/versions/: 494e66f7a6a4_init_all_tables.py
app/: __init__.py  config.py  db.py  main.py
app/core/: alarm_broadcaster.py  alarm_dedup.py  alarm_severity.py  batch_analyzer.py  client_ip.py  csrf.py  detector.py  email_notifier.py  gpu_monitor.py  health_recorder.py  metrics.py  rate_limiter.py  schedule_checker.py  security_headers.py  stream_processor.py
app/models/: __init__.py  alarm_record.py  annotation_box.py  annotation_image.py  annotation_snapshot.py  dataset.py  detection_box.py  detection_result.py  operation_log.py  sys_session.py  (+6 more)
models/: .gitkeep
scripts/: auto_annotate.py  batch_annotate.py  export_onnx.py  fix_all_403.py  fix_error_handling.py  fix_remaining_msgs.py  init_db.sql  test_modal.html  train.py
tests/: test_admin.py  test_alarm_broadcaster.py  test_alarm_dedup.py  test_alarm_severity.py  test_annotation_snapshot.py  test_auth_service.py  test_batch_analyzer.py  test_csrf.py  test_detector.py  test_email_notifier.py  test_gpu_monitor.py  test_health_recorder.py  test_metrics.py  test_minio_client.py  test_operation_log_service.py  test_rate_limiter.py  test_rbac.py  test_schedule_checker.py  test_security_headers.py  test_stream_processor.py  test_worker_tasks.py
(+24 files in other folders)
